[1.142] sync - hackathons.html

--- a/hackathons.html
+++ b/hackathons.html
@@ -133,7 +133,7 @@ td {
     <img src="images/hackathons/n2k18-s.gif" alt="n2k18-s"></a><br>
     n2k18: network hackathon<br>
     Сентябрь 6-11, 2018<br>
-    &Uacute;st&iacute; nad Labem, Czech Republic<br>
+    Усти-над-Лабем, Чехия<br>
     11 разработчиков<br>
     При поддержке Univerzita Jana Evangelisty Purkyn&#283;,
     финансировании Oracle и
@@ -153,7 +153,7 @@ td {
     <img src="images/hackathons/p2k18-s.gif" alt="p2k18-s"></a><br>
     p2k18: порты (и pledge) хакатон<br>
     Апрель 23-29, 2018<br>
-    Nantes, Франция<br>
+    Нант, Франция<br>
     24 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     и <a href="http://www.epitech.eu">Epitech Nantes</a>.
@@ -278,7 +278,7 @@ td {
     <img src="images/hackathons/p2k16-s.gif" alt="p2k16-s"></a><br>
     p2k16: ports hackathon<br>
     Апрель 25 - 29, 2016<br>
-    Nantes, France<br>
+    Нант, Франция<br>
     22 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.epitech.eu">Epitech Nantes</a>.
@@ -306,7 +306,7 @@ td {
     <img src="images/hackathons/l2k15-s.gif" alt="l2k15-s"></a><br>
     l2k15: libressl hackathon<br>
     Сентябрь 8 - 13, 2015<br>
-    <a href="http://foi.unizg.hr">Faculty of Organization and Informatics</a>, Vara&#382;din, Croatia<br>
+    <a href="http://foi.unizg.hr">Faculty of Organization and Informatics</a>, Vara&#382;din, Хорватия<br>
     17 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     with help of the <a href="http://foi.unizg.hr">Open Systems and Security Lab</a>.
@@ -333,7 +333,7 @@ td {
     <img src="images/hackathons/p2k15-s.gif" alt="p2k15-s"></a><br>
     p2k15: ports mini hackathon<br>
     Апрель 2 - 7, 2015<br>
-    <a href="http://emps.exeter.ac.uk/">University of Exeter</a>, UK<br>
+    <a href="http://emps.exeter.ac.uk/">Эксетерский университет</a>, Великобритания<br>
     14 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of Andy Henderson.
@@ -361,7 +361,7 @@ td {
     <img src="images/hackathons/m2k14-s.gif" alt="m2k14-s"></a><br>
     m2k14: mini hackathon<br>
     Apr 17 - 22, 2014<br>
-    Marrakech, Morocco<br>
+    Марракеш, Марокко<br>
     12 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.uca.ma/">Universit&eacute; Cadi Ayyad</a>.
@@ -370,7 +370,7 @@ td {
     <img src="images/hackathons/n2k14-s.gif" alt="n2k14-s"></a><br>
     n2k14: mini hackathon<br>
     Январь 18 - 25, 2014<br>
-    Dunedin, New Zealand<br>
+    Данидин, Новая Зеландия<br>
     15 разработчиков<br>
     При финансировании <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
@@ -398,7 +398,7 @@ td {
     <img src="images/hackathons/n2k13-s.gif" alt="n2k13-s"></a><br>
     n2k13: network hackathon<br>
     Январь 13 - 19, 2013<br>
-    Dunedin, New Zealand<br>
+    Данидин, Новая Зеландия<br>
     17 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
     and with the support of <a href="http://www.otago.ac.nz">University of Otago</a>.
