--- a/faq/index.html
+++ b/faq/index.html
@@ -105,7 +105,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq5.html#Flavors"    >OpenBSD's Flavors</a>
 <li><a href="faq5.html#Snapshots"  >Разрабатываемые Snapshot'ы</a>
 <li><a href="faq5.html#Bld"        >Собираем OpenBSD из исходников</a>
-<li><a href="faq5.html#Release"    >Making a Release</a>
+<li><a href="faq5.html#Release"    >Cборка релиза</a>
 <li><a href="faq5.html#Xbld"       >Собираем X</a>
 <li><a href="faq5.html#buildprobs" >Распростаненные проблемы при компиляции</a>
 <li><a href="faq5.html#Miscellanea">Разные вопросы и советы</a>
@@ -199,7 +199,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq17.html#clientikev1"    >Подключение к IKEv1/L2TP VPN</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/pf/index.html">Руководство PF</a></h3>
+<h3><a href="pf/index.html">Руководство PF</a></h3>
 <ul>
 <li>Основная настройка
   <ul>
