[1.540] update links - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -27,7 +27,7 @@ td { padding: 0 16px; }
 OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн</a>.
 В FAQ рассматривается последний релиз OpenBSD.
 Различия между последним официальным релизом OpenBSD и
-<a href="https://www.openbsd.org/faq/faq5.html#Flavors">разрабатываемой (<i>-current</i>)</a>
+<a href="faq5.html#Flavors">разрабатываемой (<i>-current</i>)</a>
 версией тут не рассматриваются.
 
 <h3>Quick Links:</h3>
@@ -46,7 +46,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
   <tr>
     <td><a href="https://www.openbsd.org/faq/current.html"       >Использование -current</a></td>
     <td><a href="https://www.openbsd.org/report.html"            >Сообщить об ошибке</a></td>
-    <td><a href="https://www.openbsd.org/faq/pf/index.html"      >PF руководство</a></td>
+    <td><a href="pf/index.html"      >PF руководство</a></td>
   </tr>
 </table>
 
@@ -113,20 +113,20 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq5.html#Diff"       >Подготовка Diff</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq14.html">Настройка диска</a></h3>
+<h3><a href="faq14.html">Настройка диска</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq14.html#intro"        >Диски и разделы</a>
-<li><a href="https://www.openbsd.org/faq/faq14.html#fdisk"        >Использование fdisk</a>
-<li><a href="https://www.openbsd.org/faq/faq14.html#disklabel"    >Disk Labels</a>
-<li><a href="https://www.openbsd.org/faq/faq14.html#BootAmd64"    >Процесс загрузки amd64</a>
-<li><a href="https://www.openbsd.org/faq/faq14.html#SoftUpdates"  >Soft Updates</a>
-<li><a href="https://www.openbsd.org/faq/faq14.html#altroot"      >Root Partition Backup (/altroot)</a>
-<li><a href="https://www.openbsd.org/faq/faq14.html#DupFS"        >Дублирование ФС</a>
-<li><a href="https://www.openbsd.org/faq/faq14.html#Quotas"       >Disk Quotas</a>
-<li><a href="https://www.openbsd.org/faq/faq14.html#foreignfs"    >Доступ к другим ФС</a>
-<li><a href="https://www.openbsd.org/faq/faq14.html#MountImage"   >Подключение Disk Images</a>
-<li><a href="https://www.openbsd.org/faq/faq14.html#GrowPartition">Увеличение размера раздела диска</a>
-<li><a href="https://www.openbsd.org/faq/faq14.html#softraid"     >Шифрование дисков и RAID</a>
+<li><a href="faq14.html#intro"        >Диски и разделы</a>
+<li><a href="faq14.html#fdisk"        >Использование fdisk</a>
+<li><a href="faq14.html#disklabel"    >Disk Labels</a>
+<li><a href="faq14.html#BootAmd64"    >Процесс загрузки amd64</a>
+<li><a href="faq14.html#SoftUpdates"  >Soft Updates</a>
+<li><a href="faq14.html#altroot"      >Root Partition Backup (/altroot)</a>
+<li><a href="faq14.html#DupFS"        >Дублирование ФС</a>
+<li><a href="faq14.html#Quotas"       >Disk Quotas</a>
+<li><a href="faq14.html#foreignfs"    >Доступ к другим ФС</a>
+<li><a href="faq14.html#MountImage"   >Подключение Disk Images</a>
+<li><a href="faq14.html#GrowPartition">Увеличение размера раздела диска</a>
+<li><a href="faq14.html#softraid"     >Шифрование дисков и RAID</a>
 </ul>
 
 <h3><a href="https://www.openbsd.org/faq/faq6.html">Работа в сети</a></h3>
